--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
 
       <!-- Left: Logo -->
-      <a class="navbar-brand" href="/home">
+      <a class="navbar-brand" href="/index.html">
         <img src="assets/images/logo.png" alt="Logo" style="height: 50px;" />
       </a>
 
@@ -30,7 +30,7 @@
       <div class="collapse navbar-collapse justify-content-center">
         <ul class="navbar-nav mb-2 mb-lg-0">
 
-          <li class="nav-item"><a class="nav-link" href="/home">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 About
