--- a/about/our-history.html
+++ b/about/our-history.html
@@ -71,7 +71,16 @@
     <div class="offcanvas-body">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="/home">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+        <li class="nav-item">
+          <a class="nav-link" data-bs-toggle="collapse" href="#mobileDropdown" role="button" aria-expanded="false" aria-controls="mobileDropdown">
+            About
+          </a>
+          <div class="collapse" id="mobileDropdown">
+            <ul class="list-unstyled ms-3">
+              <li><a class="nav-link" href="/about/our-history">Interior Plywood</a></li>
+            </ul>
+          </div>
+        </li>
 
         <!-- Dropdown in sidebar (manually created) -->
         <li class="nav-item">
