--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                         </div>
                     </div>
                     <div class="col-md-9">
-                        <div class="testimonial-card h-100 w-100">
+                        <div class="testimonial-card h-100 w-100 pe-5 ps-5 pt-3">
                             <div class="d-flex justify-content-end align-items-center">
                                 <div class="stars">★ ★ ★ ★ ☆</div>
                             </div>
@@ -408,8 +408,8 @@
                             <div class="play-button">&#9658;</div>
                         </div>
                     </div>
-                    <div class="col-md-9 d-flex align-items-stretch">
-                        <div class="testimonial-card h-100 w-100">
+                    <div class="col-md-9">
+                        <div class="testimonial-card h-100 w-100 pe-5 ps-5 pt-3">
                             <div class="d-flex justify-content-end align-items-center">
                                 <div class="stars">★ ★ ★ ★ ☆</div>
                             </div>
