--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                 </div>
                 <div class="modal-body p-0">
                     <div class="ratio ratio-16x9">
-                        <iframe id="video1" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0"
+                        <iframe id="video1" src="https://www.youtube.com/embed/VIDEO_ID"
                             allowfullscreen></iframe>
                     </div>
                 </div>
@@ -464,7 +464,7 @@
                 </div>
                 <div class="modal-body p-0">
                     <div class="ratio ratio-16x9">
-                        <iframe id="video2" src="https://www.youtube.com/embed/eN3NrsZ5B64?rel=0"
+                        <iframe id="video2" src="https://www.youtube.com/embed/VIDEO_ID"
                             allowfullscreen></iframe>
                     </div>
                 </div>
@@ -480,7 +480,7 @@
                 </div>
                 <div class="modal-body p-0">
                     <div class="ratio ratio-16x9">
-                        <iframe id="video3" src="https://www.youtube.com/embed/ScMzIvxBSi4?rel=0"
+                        <iframe id="video3" src="https://www.youtube.com/embed/VIDEO_ID"
                             allowfullscreen></iframe>
                     </div>
                 </div>
