--- a/our-history.html
+++ b/our-history.html
@@ -84,7 +84,7 @@
     </nav>
 
     <!-- Offcanvas Sidebar for Mobile -->
-    <div class="offcanvas offcanvas-start" tabindex="-1" id="mobileNav" aria-labelledby="mobileNavLabel">
+    <div class="offcanvas offcanvas-start w-75" tabindex="-1" id="mobileNav" aria-labelledby="mobileNavLabel">
         <div class="offcanvas-header">
             <!-- <h5 class="offcanvas-title" id="mobileNavLabel">Menu</h5> -->
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
