--- a/plywood/index.html
+++ b/plywood/index.html
@@ -35,7 +35,7 @@
 
                     <li class="nav-item"><a class="nav-link" href="/">HOME</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" id="aboutDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             ABOUT US
                         </a>
@@ -46,7 +46,7 @@
 
                     <!-- Dropdown -->
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="productsDropdown" role="button"
+                        <a class="nav-link dropdown-toggle active" href="#" id="productsDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             OUR PRODUCTS
                         </a>
@@ -54,7 +54,7 @@
 
                             <!-- Plywood submenu -->
                             <li class="nav-item dropdown plywooddrop">
-                                <a class="nav-link dropdown-toggle active" href="/plywood" id="plywoodDropdown" role="button">
+                                <a class="nav-link dropdown-toggle active" href="/plywood" id="plywoodDropdown" role="button" style="background: #fff300;">
                                     PLYWOOD
                                 </a>
                                 <ul class="dropdown-menu plywoodsub" aria-labelledby="plywoodDropdown">
@@ -82,7 +82,7 @@
     </nav>
 
     <!-- Offcanvas Sidebar for Mobile -->
-    <div class="offcanvas offcanvas-start" tabindex="-1" id="mobileNav" aria-labelledby="mobileNavLabel">
+    <div class="offcanvas offcanvas-start w-75" tabindex="-1" id="mobileNav" aria-labelledby="mobileNavLabel">
         <div class="offcanvas-header">
             <!-- <h5 class="offcanvas-title" id="mobileNavLabel">Menu</h5> -->
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -106,7 +106,7 @@
 
                 <!-- Dropdown in sidebar (manually created) -->
                 <li class="nav-item">
-                    <a class="nav-link" data-bs-toggle="collapse" href="#mobileDropdown" role="button"
+                    <a class="nav-link active" data-bs-toggle="collapse" href="#mobileDropdown" role="button"
                         aria-expanded="false" aria-controls="mobileDropdown">
                         OUR PRODUCTS
                     </a>
