--- a/index.html
+++ b/index.html
@@ -140,6 +140,12 @@
             <div class="carousel-inner">
 
                 <div class="carousel-item active" style="background-image: url('assets/images/banner.png');">
+                    <div class="carousel-title">
+                        <h1>Built to Last</h1>
+                        <h1>Designed to Inspire</h1>
+                        <p class="text-center">Premium plywood trusted by architects, <br> builders, and homeowners for
+                            30+ years.</p>
+                    </div>
                     <div class="explore-btn">
                         <a href="#">EXPLORE NOW <span class="arrow-circle">
                                 →
@@ -149,6 +155,12 @@
                 </div>
 
                 <div class="carousel-item" style="background-image: url('assets/images/banner.png');">
+                    <div class="carousel-title">
+                        <h1>Built to Last</h1>
+                        <h1>Designed to Inspire</h1>
+                        <p class="text-center">Premium plywood trusted by architects, <br> builders, and homeowners for
+                            30+ years.</p>
+                    </div>
                     <div class="explore-btn">
                         <a href="#">EXPLORE NOW <span class="arrow-circle">
                                 →
@@ -439,7 +451,7 @@
     </section>
 
 
-    
+
     <!-- Video Modals -->
     <div class="modal fade" id="videoModal1" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg">
@@ -605,7 +617,7 @@
             </div>
         </div>
 
-        
+
 
         <!-- YouTube Video Modal -->
         <div class="modal fade" id="galleryVideoModal" tabindex="-1" aria-hidden="true">
