--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <div class="carousel-title">
                         <h1>Built to Last</h1>
                         <h1>Designed to Inspire</h1>
-                        <p class="text-center">Premium plywood trusted by architects, <br> builders, and homeowners for
+                        <p class="text-center">Premium plywood trusted by <br> architects,  builders, and homeowners for
                             30+ years.</p>
                     </div>
                     <div class="explore-btn">
@@ -158,7 +158,7 @@
                     <div class="carousel-title">
                         <h1>Built to Last</h1>
                         <h1>Designed to Inspire</h1>
-                        <p class="text-center">Premium plywood trusted by architects, <br> builders, and homeowners for
+                        <p class="text-center">Premium plywood trusted by <br> architects, builders, and homeowners for
                             30+ years.</p>
                     </div>
                     <div class="explore-btn">
